--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,4 @@
-<hitml>
+<html>
     <head>
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
@@ -833,7 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
-                <p>Cesar Augusto Apraez Riascos</p>
+                <p>Cesar Apraez</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
